resolve overflow bug

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,11 +5,18 @@
 
 :root {
     --font: sans-serif;
+    --header-height: 110px;
+    --header-gap: 100px;
 }
 
 header {
     background: black !important;
     border: none;
+    height: calc(var(--header-height) - 16px); // account for padding
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 #banner {
@@ -62,5 +69,26 @@ body {
             border-radius: 8px;
             font-weight: 100;
         }
+    }
+}
+
+// Prevents an overflow bug in the Table of Contents
+.wrapper {
+    > nav {
+        top: calc(var(--header-height) + var(--header-gap));
+        overflow-y: auto;
+        height: calc(100vh - (var(--header-height) + var(--header-gap)))
+    }
+
+    > section {
+        margin-top: calc(var(--header-height) + var(--header-gap))
+    }
+
+    > footer {
+        display: none
+    }
+
+    ::-webkit-scrollbar {
+        display: none;
     }
 }
